# vol2birdR

./: .Rbuildignore  .gitignore  CITATION.cff  CRAN-SUBMISSION  DESCRIPTION  LICENSE  NAMESPACE  NEWS.md  NOTICE  README.Rmd  README.html  README.md  _pkgdown.yml  cleanup  codemeta.json  configure  configure.ac  configure.win  cran-comments.md  vol2birdR.Rproj
.github/workflows/: R-CMD-check.yaml  mistnet.yaml
R/: RcppExports.R  install.R  load_volume.R  mistnet_load.R  nexrad_station_file.R  package.R  rsl2odim.R  vol2bird.R  vol2birdR.R  vol2bird_config.R  vol2bird_version.R  zzz.R
doc/: package.Rmd  package.html  vol2birdR.R  vol2birdR.Rmd  vol2birdR.html
docs/: 404.html  LICENSE-text.html  LICENSE.html  authors.html  index.html  pkgdown.yml  search.json  sitemap.xml
docs/articles/: index.html  package.html  vol2birdR.html
docs/news/: index.html
docs/reference/: PolarVolume-class.html  RaveIO-class.html  Rcpp_PolarVolume-class.html  Rcpp_RaveIO-class.html  Rcpp_Vol2Bird-class.html  Rcpp_Vol2BirdConfig-class.html  Vol2Bird-class.html  Vol2Bird.html  Vol2BirdConfig-class.html  branch.html  cpp_mistnet_init.html  cpp_printMemory.html  cpp_vol2bird_get_wsr88d_site_location.html  cpp_vol2bird_initialize.html  cpp_vol2bird_namespace__store_main_thread_id.html  cpp_vol2bird_set_wsr88d_site_location.html  cpp_vol2bird_version.html  get_install_urls.html  index.html  install_config.html  install_mistnet.html  install_mistnet_from_file.html  install_mistnet_model.html  install_mistnet_nexrad.html  install_os.html  install_path.html  install_type.html  lib_installed.html  load_volume.html  mistnet_default.html  mistnet_exists.html  mistnet_install_lib.html  mistnet_install_libs.html  mistnet_installed.html  mistnet_start.html  nexrad_station_file.html  rsl2odim.html  skip_if_no_temp_access.html  torch_install_path.html  vol2birdR-package.html  (+3 more)
inst/: COPYRIGHTS
inst/libhlhdf/: hlhdf.h  hlhdf_alloc.h  hlhdf_compound.h  hlhdf_compound_utils.h  hlhdf_debug.h  hlhdf_defines_private.h  hlhdf_node.h  hlhdf_node_private.h  hlhdf_nodelist.h  hlhdf_read.h  hlhdf_write.h
inst/libiris2odim/: dlist.h  iris2list_interface.h  iris2list_listobj.h  iris2list_sigmet.h  iris2odim.h
inst/libmistnet/: mistnet.h
inst/librave/: bitmap_generator.h  cartesian.h  cartesiancomposite.h  cartesianparam.h  cartesianvolume.h  composite.h  detection_range.h  lazy_dataset.h  odc_hac.h  odim_io_utilities.h  polar.h  polarnav.h  polarscan.h  polarscanparam.h  polarvolume.h  proj_wkt_helper.h  projection.h  radardefinition.h  rave_acrr.h  rave_attribute.h  rave_attribute_table.h  rave_config.h  rave_data2d.h  rave_datetime.h  rave_debug.h  rave_field.h  rave_gra.h  rave_hlhdf_utilities.h  rave_io.h  rave_list.h  rave_object.h  rave_proj.h  rave_qitotal.h  rave_transform.h  rave_types.h  rave_utilities.h  raveobject_list.h  raveutil.h  transform.h  vertical_profile.h  (+1 more)
inst/librsl/: rsl.h  wsr88d.h
inst/libvol2bird/: librender.h  libvol2bird.h
inst/m4/: ax_lib_hdf5.m4  ax_lib_proj.m4  check_proj.m4  proj_macro.m4
man/: PolarVolume-class.Rd  PolarVolume.Rd  RaveIO-class.Rd  RaveIO.Rd  Rcpp_PolarVolume-class.Rd  Rcpp_RaveIO-class.Rd  Rcpp_Vol2Bird-class.Rd  Rcpp_Vol2BirdConfig-class.Rd  Vol2Bird-class.Rd  Vol2Bird.Rd  Vol2BirdConfig-cash-new.Rd  Vol2BirdConfig-class.Rd  Vol2BirdConfig.Rd  branch.Rd  cpp_mistnet_init.Rd  cpp_printMemory.Rd  cpp_vol2bird_get_wsr88d_site_location.Rd  cpp_vol2bird_initialize.Rd  cpp_vol2bird_namespace__store_main_thread_id.Rd  cpp_vol2bird_set_wsr88d_site_location.Rd  cpp_vol2bird_version.Rd  get_install_libs_url.Rd  get_install_urls.Rd  install_config.Rd  install_exists.Rd  install_mistnet.Rd  install_mistnet_from_file.Rd  install_mistnet_model.Rd  install_mistnet_nexrad.Rd  install_os.Rd  install_path.Rd  install_type.Rd  lib_installed.Rd  load_volume.Rd  mistnet_default.Rd  mistnet_exists.Rd  mistnet_install_lib.Rd  mistnet_install_libs.Rd  mistnet_installed.Rd  mistnet_start.Rd  (+9 more)
mistnet/: CMakeLists.txt  clean_up.sh
mistnet/src/: mistnet.cpp
src/: Makevars.in  Makevars.win  Makevars.win.in  RaveIO.cpp  RcppExports.cpp  librave.h  mistnet.cpp  symbols.rds  vol2birdR_types.h
src/includes/libhlhdf/: hlhdf_private.h  hlhdf_types.h
src/includes/libiris2odim/: iris2list_interface.h  iris2list_sigmet.h  irisdlist.h
src/includes/libmistnet/: libmistnet.h  mistnet.h
src/includes/librave/: area.h  cartesian_odim_io.h  composite_algorithm.h  ctfilter.h  dealias.h  lazy_nodelist_reader.h  polar_odim_io.h  polarscanparam.h  poo_composite_algorithm.h  (+7 more)
src/libhlhdf/: LICENSE  hlhdf.c  hlhdf_alloc.c  hlhdf_compound.c  hlhdf_compound_utils.c  hlhdf_debug.c  hlhdf_node.c  hlhdf_nodelist.c  hlhdf_read.c  hlhdf_write.c
src/libiris2odim/: dlist.c  iris2list.c  iris2odim.c  irisdlist.c
src/librave/: LICENSE  area.c  bitmap_generator.c  cartesian.c  cartesian_odim_io.c  cartesiancomposite.c  cartesianparam.c  cartesianvolume.c  composite.c  ctfilter.c  dealias.c  detection_range.c  lazy_dataset.c  lazy_nodelist_reader.c  odc_hac.c  odim_io_utilities.c  polar.c  polar_odim_io.c  polarnav.c  polarscan.c  polarscanparam.c  polarvolume.c  poo_composite_algorithm.c  proj_wkt_helper.c  projection.c  projection_pipeline.c  radardefinition.c  rave_acrr.c  rave_alloc.c  rave_attribute.c  rave_attribute_table.c  rave_data2d.c  rave_datetime.c  rave_debug.c  rave_field.c  rave_gra.c  rave_hlhdf_utilities.c  rave_io.c  rave_list.c  rave_object.c  (+10 more)
src/librsl/: anyformat_to_radar.c  gzip.c  radar.c  rainbow.c  rainbow_to_radar.c  ray_indexes.c  rsl.h  uf_to_radar.c  volume.c  wsr88d.c  wsr88d_get_site.c  wsr88d_m31.c  wsr88d_merge_split_cuts.c  wsr88d_remove_sails_sweep.c  wsr88d_to_radar.c
src/libvol2bird/: libdealias.c  libinversion.c  librender.c  librsl.c  libvol2bird.c
tests/: testthat.R
tests/testthat/: test-class_vol2birdconfig.R  test-vol2bird.R  test-vol2bird_version.R  test_vol2bird.R  test_vol2bird_config.R
tools/: get_h5_api_cflags.R  get_hdf5_libraries.R  get_proj_libraries.R  runtest.sh
tools/m4/: check_proj.m4
vignettes/: package.Rmd  vol2birdR.Rmd
(+4 files in other folders)
